# pyGriFE

./: .readthedocs.yaml  pyproject.toml
docs/source/: conf.py
src/pygrife/: extractor_main.py
src/pygrife/GUI/: GUI_main.py  seg_map_viewer.py
src/pygrife/grizli_functions/: FLT_fns.py  catalogue_fns.py
