[build-system]
requires = ["setuptools>=61.0","oldest-supported-numpy", "wheel", "Cython", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGriFE"
dynamic = ["version"]
authors = [
  { name="Peter Watson", email="peter.watson+pyGFE@inaf.it" },
]
description = "A set of tools to aid in the extraction of sources from NIRISS."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=5.3",
    "numpy>=1.26.4",
    "matplotlib>=3.6",
    "tqdm>=4.66",
    "regions>=0.8",
    "sep>=1.4.0"
]

[project.optional-dependencies]
grizli = [
    "grizli[jwst]",
]
GUI = [
    "pyqt6>=6.6.0",
    "qimage2ndarray @ git+https://github.com/hmeine/qimage2ndarray",
]
docs = [
    "sphinx-copybutton>=0.5",
    "sphinx>=7.2",
    "numpydoc>=1.6",
    # "furo>=2024.1",
    "sphinx-astropy[confv2]>=1.9.1"
]

[project.urls]
"Homepage" = "https://github.com/PJ-Watson/pyGriFE"
"Bug Tracker" = "https://github.com/PJ-Watson/pyGriFE/issues"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = '(.*.txt|.*.md|.*.toml|.*.odg)'
preview = true

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\._.*$',  # Ignore anything that's private (e.g., starts with _)
    'seg_map_viewer*',
    'qt_utils*',
    'GUI_main*',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.setuptools_scm]
version_file = "src/pygrife/_version.py"
